--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,8 @@
               "src/styles.scss",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js"],
+            "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js",
+            "./node_modules/jquery/dist/jquery.js"],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
